--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alex Rajya",
   "license": "ISC",
   "dependencies": {
+    "bestbuy": "^2.3.1",
     "express": "^4.17.1",
     "ip": "^1.1.5"
   }
