--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Software engineering coursework",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine",
     "start": "node server.js"
   },
   "author": "Alex Rajya",
@@ -13,5 +13,8 @@
     "bestbuy": "^2.3.1",
     "express": "^4.17.1",
     "ip": "^1.1.5"
+  },
+  "devDependencies": {
+    "jasmine": "^3.5.0"
   }
 }
